# functy

./: AUTHORS  COPYING  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README.md  config.h.in  configure  configure.ac
assets/: COPYING  Makefile.am  Makefile.in  functy.ui
assets/icons/: Makefile.in
assets/shaders/: Makefile.am  Makefile.in  cartesian-shadow.fs  cartesian-shadow.vs  cartesian.fs  cartesian.vs  curve-shadow.fs  curve-shadow.vs  curve.fs  curve.vs  depth.fs  screen.fs  spherical-shadow.fs  spherical-shadow.vs  spherical.fs  spherical.vs
debian/: changelog  control  copyright  functy.1  menu  rules  watch
examples/: BouncingBall.xml  BumpySlides.xml  CurveSphere01.xml  CurveSphere02.xml  Fan01.xml  Flower01.xml  Flower02.xml  Flower03.xml  Grid.xml  Islands01.xml  LavaLamp01.xml  LavaLamp02.xml  Lemonade01.xml  LensEffect.xml  Lissajous01.xml  Lissajous02.xml  Lissajous03.xml  LissajousLights.xml  Logo-libsymbolic.xml  Logo.xml  Loops01.xml  Metal.xml  Pulsate.xml  Ribbon01.xml  Ring01.xml  Ring02.xml  Ring03.xml  ScaryForest.xml  ScarySlides.xml  ShadowExample.xml  Spikes01.xml  Spiral01.xml  Spiral02.xml  Spiral03.xml  Tartan.xml  WhirlpoolSphere.xml  Wrap01.xml  Wrap02.xml
linux/: build  functy.spec
linux/snap/: snapcraft.yaml
linux/snap/setup/gui/: functy.desktop
resources/: Icons.xml
resources/icons/: cartesian01.xcf  curve.xcf  spherical.xcf
src/: Makefile.am  Makefile.in  audio.c  audio.h  cartesian.c  cartesian.h  controlvar.c  controlvar.h  curve.c  curve.h  exportbitmap.c  exportbitmap.h  exportply.c  exportply.h  exportstl.c  exportstl.h  exportsvx.c  exportsvx.h  exportvdb.c  exportvdb.h  filesave.c  filesave.h  function.c  function.h  function_private.h  functy.c  functy.h  global.c  global.h  longpoll.c  longpoll.h  ovdbc.cpp  ovdbc.h  recall.c  recall.h  shader.c  shader.h  shadow.c  shadow.h  spherical.c  (+9 more)
windows/: assets.wxs  build.bat  buildFragments.bat  buildSetup.bat  examples.wxs  functy.wxs  gtk-libs.wxs  stripMakefiles.xsl
windows/BootStrap/: bootstrap.wxs
windows/wixui/functy/: WixUI_Functy.wxs
working/: AlienEgg.xml  Curtain.xml  Frenet01.xml  Joanna01.xml  Martin01.xml  Olympics.xml  Sphere05.xml  Stars01.xml  Working.xml
