EXTRA_DIST = linux/build linux/functy.spec windows/*.bat windows/*.wxs windows/gtk-libs.zip windows/Functy.ico windows/BootStrap/bootstrap.wxs windows/BootStrap/functy48.png windows/wixui/*.wxs windows/wixui/CPL.TXT windows/wixui/functy/*.wxs windows/wixui/Bitmaps/*.bmp windows/wixui/Bitmaps/*.ico examples/*.xml debian/changelog debian/compat debian/control debian/copyright debian/docs debian/functy.1 debian/menu debian/rules debian/watch resources/cleanglade.py config/compile  config/depcomp  config/install-sh  config/missing

SUBDIRS = src assets
dist_doc_DATA = AUTHORS ChangeLog COPYING INSTALL NEWS README

ChangeLog:
	touch $@

